Prevent input from overlapping with language label

--- a/resources/less/editor.less
+++ b/resources/less/editor.less
@@ -193,7 +193,7 @@ section.editor-form > div > .editor-form__component-wrapper {
   font-size: 16px;
   border: 1px solid @section-header-text;
   border-radius: 2px;
-  padding: 10px 14px 11px;
+  padding: 10px 28px 11px 14px;
   height: 43px;
   width: 434px;
 }
